--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.82.0">
-    <title>branch inseob </title>
+    <title>시니어를 위한 IT 교육 </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
 
@@ -57,8 +57,8 @@
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="검색" aria-label="검색">
+          <button class="btn btn-outline-success" type="submit">search</button>
         </form>
       </div>
     </div>
