chage image and description & input image

--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -38,6 +38,7 @@
   <body>
     
 <header>
+  <!-- 수평메뉴 nav 클래스. 국민학교 ~ search 버튼까지-->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">국민학교</a>
@@ -56,8 +57,10 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+         <!-- Search -->
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="검색" aria-label="검색">
+          <!-- form-control 입력창 꾸며주는 클래스 -->
           <button class="btn btn-outline-success" type="submit">search</button>
         </form>
       </div>
@@ -75,35 +78,42 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <img src="../static/brand/kiosk_elder screen.jpg" alt="" width="100%" height="100%">
+        
+         <!--
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        -->
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p>Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <h1 style="color:black;"><B>시니어를 위한 IT교육</B></h1>
+            <p style="color:black;">기본적인 IT 지식을 알려드립니다</p>
+            <p><a class="btn btn-lg btn-primary" href="#">등록</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
+        <img src="../static/brand/kiosk_screen.jpg" alt="" width="100%" height="100%">
+        <!--
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        -->
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <h1 style="color:white;"><B>자신있는 키오스크 주문</B></h1>
+            <p style="color:white;">키오스크 주문 자신있게 해드립니다</p>
+            <p><a class="btn btn-lg btn-primary" href="#">주문하기</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
+        <img src="../static/brand/wifi-bluetooth_screen.png" alt="" width="100%" height="100%">
+        <!--
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        -->
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1 style="color:black;"><B>다양한 IT 기술</B></h1>
+            <p style="color:black;">와이파이, 블루투스, 데이터 등 더 이상 헷갈리지 않아요</p>
+            <p><a class="btn btn-lg btn-primary" href="#">IT 기술 배워보아요</a></p>
           </div>
         </div>
       </div>
@@ -128,25 +138,32 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
+        <img src="../static/brand/kiosk_icon.png" style="border-radius: 50%;" alt="" width="160" height="160">
+        <!--
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        -->
 
-        <h2>Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <h2>키오스크</h2>
+        <p>키오스크 주문에 대해 알아보아요.</p>
+        <p><a class="btn btn-secondary" href="#">자세히 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
+        <img src="../static/brand/wifi_icon.png"  style="border-radius: 50%;" alt="" width="160" height="160">
+        <!--
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        -->
+        <h2>와이파이</h2>
+        <p>IT 기술에 대해 알아보아요.</p>
+        <p><a class="btn btn-secondary" href="#">자세히 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
+        <img src="../static/brand/bulletin-board_icon.png" style="border-radius: 50%;" alt="" width="160" height="160">
+        <!--
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        -->
+        <h2>게시판</h2>
+        <p>다양한 의견을 남겨주세요.</p>
+        <p><a class="btn btn-secondary" href="#">자세히 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
