--- a/templates/home.html
+++ b/templates/home.html
@@ -50,11 +50,20 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/home">Home</a>
+            </li>
+            {% if user_id != null %}
+            <li class="nav-item">
+            {{user_id}}님 반갑습니다.
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="/logout">Logout</a>
             </li>
+            {%else%}
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
@@ -170,7 +179,7 @@
         -->
           <h2>게시판</h2>
           <p>다양한 의견을 남겨주세요.</p>
-          <p><a class="btn btn-secondary" href="#">자세히 &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="/bullet">자세히 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -182,15 +191,16 @@
       <div class="row featurette">
         <div class="col-md-7">
           <!-- class="featurette-heading" -->
-          <h2 class="h1">무인화 주문 <br>누구나 할 수 있습니다 <!--<span class="text-muted">It’ll blow your mind.</span>-->
+          <h2 class="h1">무인화 주문 <br>누구나 할 수 있습니다
+            <!--<span class="text-muted">It’ll blow your mind.</span>-->
           </h2>
           <p class="lead">키오스크 주문 더 이상 겁내지 마세요. <br>여기서 연습할 수 있습니다.
           </p>
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/2YEZ/image/546GrykXlQYcm_eKGhJLgFHExU8.png" 
-          style="border-radius: 0%;" alt="" width="400" height="400">
+            src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/2YEZ/image/546GrykXlQYcm_eKGhJLgFHExU8.png"
+            style="border-radius: 0%;" alt="" width="400" height="400">
           <!--
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="400"
             height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
@@ -207,14 +217,15 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <!-- class="featurette-heading" -->
-          <h2 class="h1">IT 기술 안내 <!--<span class="text-muted">See for yourself.</span>-->
+          <h2 class="h1">IT 기술 안내
+            <!--<span class="text-muted">See for yourself.</span>-->
           </h2>
           <p class="lead">와이파이, 블루투스, 데이터 등 IT 기초지식과 최신 IT 뉴스를 알려드립니다.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="https://image.ajunews.com/content/image/2017/08/09/20170809134824786316.jpg" 
-          style="border-radius: 0%;" alt="" width="400" height="400">
+            src="https://image.ajunews.com/content/image/2017/08/09/20170809134824786316.jpg" style="border-radius: 0%;"
+            alt="" width="400" height="400">
           <!--
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="400"
             height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
@@ -231,14 +242,15 @@
       <div class="row featurette">
         <div class="col-md-7">
           <!-- class="featurette-heading" -->
-          <h2 class="h1">게시판 <!--<span class="text-muted">Checkmate.</span>-->
+          <h2 class="h1">게시판
+            <!--<span class="text-muted">Checkmate.</span>-->
           </h2>
           <p class="lead">다양한 의견을 남겨주세요.<br> 건의사항 환영합니다.</p>
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="https://png.pngtree.com/png-vector/20190114/ourlarge/pngtree-vector-pencil-icon-png-image_313118.jpg" 
-          style="border-radius: 0%;" width="400" height="400" >
+            src="https://png.pngtree.com/png-vector/20190114/ourlarge/pngtree-vector-pencil-icon-png-image_313118.jpg"
+            style="border-radius: 0%;" width="400" height="400">
           <!--
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="400"
             height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
