--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
             </li>
             {% endif %}
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="/register">회원가입</a>
             </li>
           </ul>
           <!-- Search -->
