--- a/templates/home.html
+++ b/templates/home.html
@@ -52,21 +52,19 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/home">Home</a>
             </li>
+
             {% if user_id != null %}
             <li class="nav-item">
-            {{user_id}}님 반갑습니다.
+              {{user_id}}님 반갑습니다.
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
-            {%else%}
+            {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
+              <a class="nav-link active" href="/login_register">로그인/회원가입</a>
             </li>
             {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="/register">회원가입</a>
-            </li>
           </ul>
           <!-- Search -->
           <form class="d-flex">
