--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -16,16 +16,16 @@
                     <img src="../static/brand/tw.png" alt="twitter">
                     <img src="../static/brand/gl.png" alt="google">
                 </div>
-                <form id="login" action="/set_login" class="input-group">
-                    <input type="text" class="input-field" placeholder="User name or Email" required>
-                    <input type="password" class="input-field" placeholder="Enter Password" required>
+                <form id="login" method="POST" action="/set_login" class="input-group">
+                    <input type="text" class="input-field" name="user_id" placeholder="User name or Email" required>
+                    <input type="password" class="input-field" name="password" placeholder="Enter Password" required>
                     <input type="checkbox" class="checkbox"><span>Remember Password</span>
                     <button class="submit">Login</button>
                 </form>
-                <form id="register" action="/set_register" class="input-group">
-                    <input type="ID" class="input-field" placeholder="ID를 입력하세요" required>
-                    <input type="text" class="input-field" placeholder="이름을 입력해주세요" required>
-                    <input type="password" class="input-field" placeholder="비밀번호를 입력해주세요" required>
+                <form id="register" method="POST" action="/set_register" class="input-group">
+                    <input type="ID" class="input-field" id="user_id" placeholder="ID를 입력하세요"  name="user_id" required>
+                    <input type="text" class="input-field" id="user_name" placeholder="이름을 입력해주세요" name="user_name" required>
+                    <input type="password" class="input-field" id="password" placeholder="비밀번호를 입력해주세요" name="password" required>
                     <input type="checkbox" class="checkbox"><span>Terms and conditions</span>
                     <button class="submit">REGISTER</button>
                 </form>
