--- a/templates/home.html
+++ b/templates/home.html
@@ -54,11 +54,11 @@
             </li>
 
          {% if user_id != null %}
-            <li class="nav-item">
+            <li class="nav-link active">
               {{user_id}}님 반갑습니다.
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link active" href="/logout">Logout</a>
             </li>
           {% else %}
             <li class="nav-item">
