--- a/templates/home.html
+++ b/templates/home.html
@@ -53,9 +53,9 @@
               <a class="nav-link active" aria-current="page" href="/home">Home</a>
             </li>
 
-         {% if user_id != null %}
+         {% if current_user.user_id != null %}
             <li class="nav-link active">
-              {{user_id}}님 반갑습니다.
+              {{current_user.user_id}}님 반갑습니다.
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/logout">Logout</a>
