--- a/templates/bulletBoard.html
+++ b/templates/bulletBoard.html
@@ -39,31 +39,22 @@
         <caption>List of users</caption>
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Number</th>
+            <th scope="col">Date</th>
+            <th scope="col">title</th>
+            <th scope="col">user</th>
           </tr>
         </thead>
         <tbody>
+          {% for row in rows %}
           <tr>
             <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <td>{{row[0]}}</td>
+            <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
+         
+          {% endfor %}
         </tbody>
       </table>
 </body>
