add macdonald's css link

--- a/templates/macdonalds.html
+++ b/templates/macdonalds.html
@@ -7,7 +7,10 @@
       Menu Display page
     </title>
   <link href="https://fonts.googleapis.com/css?family=Mukta Vaani" type="text/css" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+
       <link rel="stylesheet" type="text/css" href="../static/dist/css/macdonald.css">
+
   </head>
   <body>
     <div class="container">
@@ -15,14 +18,14 @@
       <div class="row header">
       <!--Title-->
       <img  src="http://logok.org/wp-content/uploads/2014/06/McDonalds-logo.png" alt="Mcdlogo" width="200px" height="160px">
-        <h1> McDonald's    </h1>
+        <h1> McDonald's </h1>
         <img src="http://logok.org/wp-content/uploads/2014/06/McDonalds-logo.png" alt="Mcdlogo" width="200px" height="160px">
       </div>
       
       <!--MahaRaja Mac-->
       <div class="row">
         <div>
-        <img src="http://stz.india.com/sites/default/files/2016/07/08/4032-maharaja-mac-banner-1.jpg" width="100%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/7819.png?" width="100%" height="auto">
           <h4 class="introducing"><i>Introducing</i> Maharaja MAC </h4>
           <h3 class="socialBurger"><i> (The Social Burger)</i></h3>
         </div>
@@ -88,7 +91,7 @@
              <td style="color:red"> Rs. 260</td></tr></tbody>
         </table>  
         <br>
-        <img src="http://www.mcdonaldsindia.net/images/large/EVM-BIG-Spicy-Chicken-Wrap.png" alt="Wrap" width="100%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/6071.png? alt="Wrap" width="100%" height="auto">
         </div>
   
       <div class="col-md-6 table-responsive">
@@ -109,7 +112,7 @@
            <td style="color:green">Rs. 232</td>
              <td style="color:red"> Rs. 240</td></tr></tbody>
         </table> 
-        <img src="http://www.mcdonaldsindia.net/images/large/EVM-McSpicy-Paneer.png" alt="Burger" width="100%" height="auto"></div>
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/3894.png?" alt="Burger" width="100%" height="auto"></div>
     </div>
       
       <!--Classy Meals-->
@@ -134,7 +137,7 @@
            </tr>
              </tbody>
         </table>  
-        <img src="http://www.mcdonaldsindia.net/images/large/EVM-McChicken.png" alt="McChicken" width="80%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/7819.png?" alt="McChicken" width="80%" height="auto">
     </div>
      
      <!--EXTRA value-->
@@ -157,7 +160,7 @@
            </tr>
          </tbody>
         </table>  
-        <img src="http://www.mcdonaldsindia.net/images/large/McAloo-Tikki-Econo-Meal.png" alt="Aloo Tikki" width="75%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1140.png?" alt="Aloo Tikki" width="75%" height="auto">
         </div>
      
       <div class="col-md-6 table-responsive">   
@@ -178,7 +181,7 @@
            </tr>
              </tbody>
         </table>  
-        <img src="http://www.mcdonaldsindia.net/images/large/EVM-McVeggie.png" alt="McVeggie" width="75%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1114.png?" alt="McVeggie" width="75%" height="auto">
     </div>
  <div class="col-md-6 table-responsive">   
  
@@ -199,7 +202,7 @@
            </tr>
              </tbody>
         </table>  
-        <img src="http://www.mcdonaldsindia.net/images/large/McEgg-Eco-ML.png" alt="Mcegg" width="75%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1301.png?" alt="Mcegg" width="75%" height="auto">
     </div>
    </div>
       
@@ -222,7 +225,7 @@
              <td style="color:green"> Rs. 54</td>              </tr>
            </tbody>
         </table>  
-        <img src="https://thecurlyhairedcook.files.wordpress.com/2014/11/mcdonalds-saucy-chipotle-chicken-egg-aloo-wraps.jpg" alt="Wrap" width="100%" height="auto">
+        <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1356.png?" alt="Wrap" width="100%" height="auto">
   </div>
       <div class="col-md-6 table-responsive">
          <table class="table table-condensed">
@@ -240,7 +243,7 @@
              </tr>
            </tbody>
            </table>
-         <img  src="https://mcdonalds.com.ph/userfiles/images/ourfood/thumb/6pcnuggets435X320ALA[3].png" alt="Chicken McNuggets" width=100% height="50%">
+         <img  src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1433.png?" alt="Chicken McNuggets" width=100% height="50%">
             
         </div>
       </div>
@@ -249,7 +252,7 @@
      <h3 class="subHeading">Desserts</h3>
       <div class="row">
         <div class="col-md-6 table-responsive">
-          <img src="http://www.mcdonaldsindia.net/images/large/McFlurry-Chocolate-Crunch.png" alt="McFlurry" width="100%" height="auto">
+          <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1433.png?" alt="McFlurry" width="100%" height="auto">
         </div>
         <div class="col-md-6 table-responsive">
           <br><br><br><br><br>
@@ -308,8 +311,8 @@
            </tbody>
          </table>
          <div class="row">
-  <img src="https://www.mcdeliveryonline.com/indelhi//static/1493097702283/assets/91/products/1466.png?" alt="Sharing pack for 2" width="50%" height="auto">
-  <img src="https://www.mcdeliveryonline.com/indelhi//static/1493097702283/assets/91/products/1467.png?" alt="Sharing pack for 3" width="50%" height="auto">
+  <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/7818.png?" alt="Sharing pack for 2" width="50%" height="auto">
+  <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/7818.png?" alt="Sharing pack for 3" width="50%" height="auto">
          </div>
        </div>
        
@@ -333,11 +336,11 @@
              </tr>
            </tbody>
          </table>
-       <img src="https://www.miconnational.com.au/pictures/orig/599%20013%20400.jpg" width="100%" height="50%">
+       <img src="https://www.mcdelivery.co.kr/kr//static/1618277814328/assets/82/products/1506.png?" width="100%" height="50%">
        </div>
      </div>
     <footer class="additional">**Upsize to Large fries and large drink at Rs. 25 also get extra cheese by adding Rs. 15 </footer>     
-   <p class="contact"> To place an order kindly contact us on  contact no: ********** or visit our website <a href="#"> <img class="lovingIt" src="https://www.famouslogos.net/images/mcdonalds-logo.jpg" alt="I'm loving it" width="160px" height="auto" </a></p>
+   <p class="contact"> To place an order kindly contact us on  contact no: ********** or visit our website <a href="#"> <img class="lovingIt" src="https://w7.pngwing.com/pngs/147/930/png-transparent-hamburger-mcdonald-s-i-m-lovin-it-advertising-jingle-mcdonalds-arch.png" alt="I'm loving it" width="160px" height="auto" </a></p>
     </div>   
   </div>
   <footer>
