connect mysql bulletpage

--- a/templates/macdonalds.html
+++ b/templates/macdonalds.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 
       <link rel="stylesheet" type="text/css" href="../static/dist/css/macdonald.css">
-
+ <!-- 맥도날드 html,css 들고 온 곳 https://codepen.io/priyanka-patange/pen/dWpaEG -->
   </head>
   <body>
     <div class="container">
