--- a/templates/bulletBoard.html
+++ b/templates/bulletBoard.html
@@ -31,20 +31,16 @@
       }
     }
   </style>
-  {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <script type="text/javascript">
-      alert("{{messages[-1]}}");
-    </script>
-    {%endif%}
-  {%endwith%}
   <!-- Custom styles for this template -->
   <link href="../static/dist/css/carousel.css" rel="stylesheet">
 </head>
 
 <body>
+  <a href="/home">
+    <h1>홈으로</h1>
+  </a>
+
   <table class="table table-striped table-hover">
-    <caption>List of users</caption>
     <thead>
       <tr>
         <th scope="col">번호</th>
