아직 더 고쳐야함 포스트 삭제하기

--- a/templates/article.html
+++ b/templates/article.html
@@ -14,5 +14,11 @@
     {{title}}<br>
     <h2>내용</h2>
     <div>{{row}} <br> </div>
+      
+      <form action="/delete_article" method="GET">
+       <input type="text" name="{{ title }}" style="display: none;" /><br><br>
+        
+        <input type="submit" value="업로드" /><br>
+    </form>
 </body>
 </html>
