add it_tech page, wifi, bluetooth description page

--- a/templates/home.html
+++ b/templates/home.html
@@ -168,7 +168,7 @@
         -->
           <h2>와이파이</h2>
           <p>IT 기술에 대해 알아보아요.</p>
-          <p><a class="btn btn-secondary" href="#">자세히 &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="/tech_description">자세히 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img src="../static/brand/support_agent.png" style="border-radius: 0%;" alt="" width="160" height="160">
